--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,7 @@ jobs:
       with:
         node-version: lts/*
         cache: npm
+    - name: Install dependencies
+      run: npm ci
     - name: Run tests
       run: npm test
