Fixed permissions on actions file
I'm about to go through a lot of revision releases...

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         path: output/
   release:
     name: Create Release
-    permission:
+    permissions:
       contents: write
     runs-on: ubuntu-latest
     steps:
