--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         path: output/
   release:
     name: Create Release
+    needs: build
     permissions:
       contents: write
     runs-on: ubuntu-latest
