--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
         cache: npm
     - name: Install dependencies
       run: npm ci
-    - name: Build Website
+    - name: Build Bundle
       run: npm run bundle
     - name: Upload artifact
       uses: actions/upload-artifact@v4
@@ -37,6 +37,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: bundle
+        path: output/
     - name: List downloaded files
       run: ls -R
     - name: Create Release
