--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,13 +31,10 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v6
     - name: Download artifact
       uses: actions/download-artifact@v4
       with:
         name: bundle
-        path: output/
     - name: List downloaded files
       run: ls -R
     - name: Create Release
@@ -48,4 +45,4 @@ jobs:
         gh release create "${tag}" \
           --title="Version ${tag#v}" \
           --notes-from-tag \
-          output/*.json
+          *.json
