Don't run tests for any pushed tags

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,11 @@ name: Tests
 
 on:
   push:
+    branches: [master]
+    tags-ignore: '**'
   pull_request:
     branches: [master]
+    tags-ignore: '**'
 
 jobs:
   test:
